--- a/index.html
+++ b/index.html
@@ -83,9 +83,6 @@
                             <div class="carousel-btn">
 
                                 <a class="btn btn-custom" href="testimonials.html">Testimonials</a>
-                               
-
-
                             </div>
                         </div>
                     </div>
@@ -749,8 +746,10 @@
                     <div class="col-lg-7">
                         <div class="donate-content">
                             <div class="section-header">
-                                <p>Be A Part Of The Campaign</p>
-                                <h2>Get in contact with our charity organization</h2>
+                                <p>
+                                    Join the 20: Fuel the Future with Your R20 000 Donation
+                                </p>
+                                <h2>Get in touch with us</h2>
                             </div>
 
                         </div>
