--- a/testimonials.html
+++ b/testimonials.html
@@ -84,7 +84,8 @@
             <div class="container">
                 <div class="section-header text-center">
                     
-                    <h2>What people are saying about our charity activities</h2>
+                    <h2>Here’s what our Stakeholders have to say about our projects…
+                    </h2>
                 </div>
                 <div class="owl-carousel testimonials-carousel">
                     <div class="testimonial-item">
