--- a/gallery.html
+++ b/gallery.html
@@ -558,16 +558,16 @@
         <!-- End Gallery -->
 
          <!-- Footer Start -->
-         <div class="footer">
+        <div class="footer">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-3 col-md-6">
                         <div class="footer-contact">
-                            <h2>Our Head Office</h2>
-                            <p><i class="fa fa-map-marker-alt"></i>Staatsartillerie Rd, Pretoria West, Pretoria, 0183
-                                <br>Building 21 - Room 227</p>
+                            <h2>Where To Find Us</h2>
+                            <p><i class="fa fa-map-marker-alt"></i>Advancement and partnerships Office, Dinokeng Building , Floor 2</p>
                             <p><i class="fa fa-phone-alt"></i>+27 12 382 4755</p>
-                            <p><i class="fa fa-envelope"></i>msibipns@tut.ac.za</p>
+                            <p><i class="fa fa-envelope"></i>msibipns@tut.ac.za / </p>
+                            <p><i class="fa fa-envelope"></i>20from20@tut.ac.za </p>
                             <div class="footer-social">
                                 <a class="btn btn-custom" href="https://x.com/official_tut"><i class="fab fa-twitter"></i></a>
                                 <a class="btn btn-custom" href="https://www.facebook.com/TUTCommunications"><i class="fab fa-facebook-f"></i></a>
@@ -579,10 +579,10 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="footer-link">
                             <h2>Popular Links</h2>
-                            <a href="index.html#about">About Us</a>
+                            <a href="#about">About Us</a>
                             <a href="donationjourney.html">Donate</a>
-                            <a href="index.html#supported-projects">Supported Projects</a>
-                            <a href="index.html#events">Upcoming Events</a>
+                            <a href="#supported-projects">Supported Projects</a>
+                            <a href="#events">Upcoming Events</a>
                         </div>
                     </div>
                     <!-- <div class="col-lg-3 col-md-6">
