--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                     </div>
                     <div class="causes-item">
                         <div class="causes-img">
-                            <img src="img/photo-56.png" alt="image" height="220">
+                            <img src="img/photo-56.png" alt="image" height="232px">
                             
                             <!--img src="img/ndumologo.jpg" alt="Image"-->
                         </div>
