Fixed the landing page

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <div class="carousel-img">
                             <img src="img/carousel-1.jpg" alt="Image">
                         </div>
-                        <div class="carousel-text">
+                        <div class="carousel-text-left">
                             <h1>#Twentyfrom20</h1>
                             <p>
                                 Our campaign aims to raise R1.2 million by securing R20,000 each from 60 companies, highlighting the power of collective effort and corporate responsibility
