--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
                             <img src="img/carousel-2.jpg" alt="Image">
                         </div>
                         <div class="carousel-text">
-                            <h1>Tshwane Varsity Hackathon</h1>
+                            <h1>Intervarsity Hackathon Series</h1>
                             <p>
-                                <b>#TVH</b> Our three-day event, spanning three provinces, will engage 500 students in developing digital solutions with social impact, highlighting career paths in technology, entrepreneurship, and engineering while addressing real-world industry challenges
+                                Our three-day event, spanning three provinces, will engage 500 students in developing digital solutions with social impact, highlighting career paths in technology, entrepreneurship, and engineering while addressing real-world industry challenges
                             </p>
                             <div class="carousel-btn">
 
@@ -114,7 +114,7 @@
                         <div class="carousel-text">
                             <h1>Grade R Centre of Excellence</h1>
                             <p>
-                                <b>#GRADE R</b> The TUT Grade R Centre for Excellence will enhance Early Childhood Development for about 100,000 learners and 1,000 practitioners through creative and innovative resources, including classrooms, a robotics centre, and art rooms, serving surrounding townships and primary schools.
+                                 The TUT Grade R Centre for Excellence will enhance Early Childhood Development for about 100,000 learners and 1,000 practitioners through creative and innovative resources, including classrooms, a robotics centre, and art rooms, serving surrounding townships and primary schools.
                                 
                             </p>
                             <div class="carousel-btn">
@@ -130,7 +130,7 @@
                         <div class="carousel-text">
                             <h1>Ndumo Community Project</h1>
                             <p>
-                                <b>#NDUMO</b> The TUT Environmental Education Centre in Ndumo Game Reserve educates thousands annually on conservation and sustainability, while addressing malnutrition, gender-based violence, and health issues, and supports research in nature conservation.
+                                 The TUT Environmental Education Centre in Ndumo Game Reserve educates thousands annually on conservation and sustainability, while addressing malnutrition, gender-based violence, and health issues, and supports research in nature conservation.
                             </p>
                             <div class="carousel-btn">
                                 <a class="btn btn-custom" href="testimonials.html">Testimonials</a>
@@ -460,7 +460,7 @@
                                          Pretoria west Campus)</p>
                                 </div>
                                 <div class="event-text">
-                                    <h3>Tshwane Varsity Hackathon</h3>
+                                    <h3>Intervarsity Hackathon Series</h3>
                                     <p>
                                         Join us for the Tshwane Varsity Hackathon that will run for 3 days at our Pretoria West Campus. Don’t miss out on 53 hours of innovation and collaboration!
                                     </p>
