--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                             <img src="img/carousel-2.jpg" alt="Image">
                         </div>
                         <div class="carousel-text">
-                            <h1>Intervarsity Hackathon</h1>
+                            <h1>Intervarsity Hackathon Series</h1>
                             <p>
                                 Our three-day event, spanning three provinces, will engage 500 students in developing digital solutions with social impact, highlighting career paths in technology, entrepreneurship, and engineering while addressing real-world industry challenges
                             </p>
