--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
         <div class="navbar navbar-expand-lg bg-light navbar-light">
             <div class="container-fluid">
                 <img src="img/Picture1.png" class="navbar-brand">
-                    <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+                    <!-- <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                         <span class="navbar-toggler-icon"></span>
-                    </button>
+                    </button> -->
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <div class="burger-menu">
                         <span class="navbar-toggler-icon"></span>
@@ -99,8 +99,6 @@
 
 
                             <h1>Intervarsity Hackathon Series</h1>
-
-
                             <p>
                                 Our three-day event, spanning three provinces, will engage 500 students in developing digital solutions with social impact, highlighting career paths in technology, entrepreneurship, and engineering while addressing real-world industry challenges
                             </p>
