--- a/donationjourney.html
+++ b/donationjourney.html
@@ -72,7 +72,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h2> Journey</h2>
+                    <h2> JOURNEY</h2>
                 </div>
             </div>
         </div>
@@ -83,7 +83,7 @@
         <!-- Donation Journey Start -->
         
         <header >
-            <h1 style="font-size: 27px;">Small contibution, big impact <br> support TUT with R20 000<br></h1>
+            <h1 style="font-size: 27px;">Small contribution, big impact <br> support TUT with R20 000<br></h1>
             
 
         </header>
