--- a/testimonials.html
+++ b/testimonials.html
@@ -72,7 +72,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h2> Testimonials</h2>
+                    <h2> TESTIMONIALS </h2>
                 </div>
             </div>
         </div>
