--- a/donationjourney.html
+++ b/donationjourney.html
@@ -202,7 +202,7 @@
 </div>
     <!--Donate Now Button Starts-->
     <div class="button-container">
-        <a href="https://forms.office.com/r/Y3tL8uGS4J" class="nav-item nav-link donate-button"><span style=" color: white;">DONATE NOW!!!</span></a>
+        <a href="https://forms.office.com/r/Y3tL8uGS4J" class="nav-item nav-link donate-button"><span style=" color: white;">DONATE NOW</span></a>
     </div>
         
     <!--Donate Now Button Ends-->
@@ -229,10 +229,10 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="footer-link">
                             <h2>Popular Links</h2>
-                            <a href="#about">About Us</a>
+                            <a href="index.html#about">About Us</a>
                             <a href="donationjourney.html">Donate</a>
-                            <a href="#supported-projects">Supported Projects</a>
-                            <a href="#events">Upcoming Events</a>
+                            <a href="index.html#supported-projects">Supported Projects</a>
+                            <a href="index.html#events">Upcoming Events</a>
                         </div>
                     </div>
                     <!-- <div class="col-lg-3 col-md-6">
