--- a/hackathon.html
+++ b/hackathon.html
@@ -136,10 +136,10 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="footer-link">
                             <h2>Popular Links</h2>
-                            <a href="#about">About Us</a>
+                            <a href="index.html#about">About Us</a>
                             <a href="donationjourney.html">Donate</a>
-                            <a href="#supported-projects">Supported Projects</a>
-                            <a href="#events">Upcoming Events</a>
+                            <a href="index.html#supported-projects">Supported Projects</a>
+                            <a href="index.html#events">Upcoming Events</a>
                         </div>
                     </div>
                     <!-- <div class="col-lg-3 col-md-6">
