--- a/ndumo-community.html
+++ b/ndumo-community.html
@@ -36,7 +36,7 @@
             <!-- Top Bar End -->
     
             <!-- Nav Bar Start -->
-            <div class="navbar navbar-expand-lg bg-dark navbar-dark">
+            <div class="navbar navbar-expand-lg bg-light navbar-light">
                 <div class="container-fluid">
                     <img src="img/Picture1.png" class="navbar-brand">
                     <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
@@ -52,6 +52,7 @@
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">More</a>
                             <div class="dropdown-menu">
+
                                 <a href="testimonials.html" class="dropdown-item">Testimonials</a>
                                 <a href="gallery.html" class="dropdown-item">Gallery</a>
                                 <a href="index.html#team" class="dropdown-item">Meet the team</a>
@@ -59,7 +60,6 @@
                             </div>
                         </div>
                         <a href="donationjourney.html" class="nav-item nav-link donate-button"><span style=" color: white;">DONATE</span></a>
-                    </div>
                     </div>
                 </div>
             </div>
