--- a/gallery.html
+++ b/gallery.html
@@ -88,7 +88,7 @@
 <!--Ndumo gallery starts-->
     <div class="container-fluid py-5">
         <div class="container pt-5 pb-3">
-            <h1 class="display-4 text-uppercase text-center mb-5">Ndumo Community Centre</h1>
+            <h1 class="display-4 text-uppercase text-center mb-5">Ndumo Community Project</h1>
             
             <div class="row portfolio-container">
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
@@ -414,8 +414,8 @@
                             <h2>Where To Find Us</h2>
                             <p><i class="fa fa-map-marker-alt"></i>Advancement and partnerships Office, Dinokeng Building , Floor 2</p>
                             <p><i class="fa fa-phone-alt"></i>+27 12 382 4755</p>
-                            <p><i class="fa fa-envelope"></i>msibipns@tut.ac.za / </p>
                             <p><i class="fa fa-envelope"></i>20from20@tut.ac.za </p>
+                            <p><i>Urgent enquries: 076 607 9488 - Ms Phumla Msibi</i> </p>
                             <div class="footer-social">
                                 <a class="btn btn-custom" href="https://x.com/official_tut"><i class="fab fa-twitter"></i></a>
                                 <a class="btn btn-custom" href="https://www.facebook.com/TUTCommunications"><i class="fab fa-facebook-f"></i></a>
