nav bar changes

--- a/index.html
+++ b/index.html
@@ -51,17 +51,24 @@
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav ml-auto">
                         <a href="index.html" class="nav-item nav-link active">Home</a>
-                        <a href="#about" class="nav-item nav-link">About</a>
+                        <div class="nav-item dropdown">
+                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" style="padding-right: 45px;">About</a>
+                            <div class="dropdown-menu">
+                                <a href="gallery.html" class="dropdown-item">Tshwane University of Technology</a>
+                                <a href="#team" class="dropdown-item">#Twentyfrom20 Campaign</a>
+                            </div>
+                        </div>
                         <a href="#supported-projects" class="nav-item nav-link">Supported Projects</a>
                         <a href="#events" class="nav-item nav-link">Events</a>
-                        <div class="nav-item dropdown">
+                        <a href="#donate" class="nav-item nav-link">Contact Us</a>
+                        <!-- <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" style="padding-right: 45px;">More</a>
                             <div class="dropdown-menu">
                                 <a href="gallery.html" class="dropdown-item">Gallery</a>
                                 <a href="#team" class="dropdown-item">Meet the team</a>
                                 <a href="#donate" class="dropdown-item">Contact Us</a>
                             </div>
-                        </div>
+                        </div> -->
                         <a href="donationjourney.html" class="nav-item nav-link donate-button"><span style=" color: white;text-align: center;">DONATE</span></a>
                     </div>
                 </div>
