nav bar changes

--- a/ndumo-community.html
+++ b/ndumo-community.html
@@ -46,10 +46,17 @@
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav ml-auto">
                         <a href="index.html" class="nav-item nav-link active">Home</a>
-                        <a href="index.html#about" class="nav-item nav-link">About</a>
+                        <div class="nav-item dropdown">
+                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" >About</a>
+                            <div class="dropdown-menu">
+                                <a href="index.html#about" class="dropdown-item">Tshwane University of Technology</a>
+                                <a href="index.html#about1" class="dropdown-item">#Twentyfrom20 Campaign</a>
+                            </div>
+                        </div>
                         <a href="index.html#supported-projects" class="nav-item nav-link">Supported Projects</a>
                         <a href="index.html#events" class="nav-item nav-link">Events</a>
-                        <div class="nav-item dropdown">
+                        <a href="index.html#donate" class="nav-item nav-link" style="padding-right: 45px;">Contact Us</a>
+                        <!-- <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">More</a>
                             <div class="dropdown-menu">
 
@@ -58,7 +65,7 @@
                                 <a href="index.html#team" class="dropdown-item">Meet the team</a>
                                 <a href="#donate" class="dropdown-item">Contact Us</a>
                             </div>
-                        </div>
+                        </div> -->
                         <a href="donationjourney.html" class="nav-item nav-link donate-button"><span style=" color: white;">DONATE</span></a>
                     </div>
                 </div>
@@ -127,10 +134,11 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="footer-link">
                             <h2>Popular Links</h2>
-                            <a href="index.html#about">About Us</a>
-                            <a href="donationjourney.html">Donate</a>
-                            <a href="index.html#supported-projects">Supported Projects</a>
-                            <a href="index.html#events">Upcoming Events</a>
+                            <a href="index.html#ourtarget">Our Target</a>
+                            <a href="index.html#team">Meet The Team</a>
+                            <a href="testimonials.html">Testimonials</a>
+                            <a href="gallery.html">Gallery</a>
+                            
                         </div>
                     </div>
                     <!-- <div class="col-lg-3 col-md-6">
