--- a/ndumoVideo.html
+++ b/ndumoVideo.html
@@ -167,10 +167,11 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="footer-link">
                             <h2>Popular Links</h2>
-                            <a href="index.html#about">About Us</a>
-                            <a href="donationjourney.html">Donate</a>
-                            <a href="index.html#supported-projects">Supported Projects</a>
-                            <a href="index.html#events">Upcoming Events</a>
+                            <a href="index.html#ourtarget">Our Target</a>
+                            <a href="index.html#team">Meet The Team</a>
+                            <a href="testimonials.html">Testimonials</a>
+                            <a href="gallery.html">Gallery</a>
+                            
                         </div>
                     </div>
                     <!-- <div class="col-lg-3 col-md-6">
