--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
                     <div class="navbar-nav ml-auto">
                         <a href="index.html" class="nav-item nav-link active">Home</a>
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" style="padding-right: 45px;">About</a>
+                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" >About</a>
                             <div class="dropdown-menu">
-                                <a href="gallery.html" class="dropdown-item">Tshwane University of Technology</a>
-                                <a href="#team" class="dropdown-item">#Twentyfrom20 Campaign</a>
+                                <a href="#about" class="dropdown-item">Tshwane University of Technology</a>
+                                <a href="#about1" class="dropdown-item">#Twentyfrom20 Campaign</a>
                             </div>
                         </div>
                         <a href="#supported-projects" class="nav-item nav-link">Supported Projects</a>
                         <a href="#events" class="nav-item nav-link">Events</a>
-                        <a href="#donate" class="nav-item nav-link">Contact Us</a>
+                        <a href="#donate" class="nav-item nav-link" style="padding-right: 45px;">Contact Us</a>
                         <!-- <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" style="padding-right: 45px;">More</a>
                             <div class="dropdown-menu">
@@ -440,8 +440,8 @@
             <div class="container">
                 <div class="section-header text-center">
 
-                  <section  id = "about" style="padding-top: 60px; margin-top: -60px;">
-                      <div class="about">
+                  <section  id = "about1" style="padding-top: 60px; margin-top: -60px;">
+                      <div class="about1">
                              <div class="container">
                                      <div class="row align-items-center">
 
@@ -913,11 +913,11 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="footer-link">
                             <h2>Popular Links</h2>
-                            <a href="#about">About Us</a>
-                            <a href="donationjourney.html">Donate</a>
-                            <a href="#supported-projects">Supported Projects</a>
-                            <a href="#events">Upcoming Events</a>
                             <a href="#ourtarget">Our Target</a>
+                            <a href="#team">Meet The Team</a>
+                            <a href="testimonials.html">Testimonials</a>
+                            <a href="gallery.html">Gallery</a>
+                            
                         </div>
                     </div>
                     <!-- <div class="col-lg-3 col-md-6">
