--- a/gallery.html
+++ b/gallery.html
@@ -47,25 +47,31 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
 
-                <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-                    <div class="navbar-nav ml-auto">
-                        <a href="index.html" class="nav-item nav-link active">Home</a>
-                        <a href="index.html#about" class="nav-item nav-link">About</a>
-                        <a href="index.html#supported-projects" class="nav-item nav-link">Supported Projects</a>
-                        <a href="index.html#events" class="nav-item nav-link">Events</a>
-                        <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">More</a>
-                            <div class="dropdown-menu">
-
-                                <a href="testimonials.html" class="dropdown-item">Testimonials</a>
-                                <a href="index.html#team" class="dropdown-item">Meet the team</a>
-                                <a href="#donate" class="dropdown-item">Contact Us</a>
+                    <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
+                        <div class="navbar-nav ml-auto">
+                            <a href="index.html" class="nav-item nav-link active">Home</a>
+                            <div class="nav-item dropdown">
+                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" >About</a>
+                                <div class="dropdown-menu">
+                                    <a href="index.html#about" class="dropdown-item">Tshwane University of Technology</a>
+                                    <a href="index.html#about1" class="dropdown-item">#Twentyfrom20 Campaign</a>
+                                </div>
                             </div>
+                            <a href="index.html#supported-projects" class="nav-item nav-link">Supported Projects</a>
+                            <a href="index.html#events" class="nav-item nav-link">Events</a>
+                            <a href="index.html#donate" class="nav-item nav-link" style="padding-right: 45px;">Contact Us</a>
+                            <!-- <div class="nav-item dropdown">
+                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">More</a>
+                                <div class="dropdown-menu">
+                                    <a href="gallery.html" class="dropdown-item">Gallery</a>
+                                    <a href="index.html#team" class="dropdown-item">Meet the team</a>
+                                    <a href="#donate" class="dropdown-item">Contact Us</a>
+                                </div>
+                            </div> -->
+                            <a href="donationjourney.html" class="nav-item nav-link donate-button"><span style=" color: white;">DONATE</span></a>
                         </div>
-                        
-                        <a href="donationjourney.html" class="nav-item nav-link donate-button"><span style=" color: white;">DONATE</span></a>
+                        </div>
                     </div>
-                </div>
             </div>
         </div>
         <!-- Nav Bar End -->
