--- a/gallery.html
+++ b/gallery.html
@@ -464,7 +464,7 @@
                         <div class="footer-link">
                             <h2>Popular Links</h2>
                             <a href="index.html#ourtarget">Our Target</a>
-                            <a href="index.html#team">Meet The Team</a>
+                            <a href="team.html">Meet The Team</a>
                             <a href="testimonials.html">Testimonials</a>
                             <!-- <a href="gallery.html">Gallery</a> -->
                             
