--- a/team.html
+++ b/team.html
@@ -353,7 +353,7 @@
                             <h2>Popular Links</h2>
                             <a href="index.html#ourtarget">Our Target</a>
                             <a href="index.html#team">Meet The Team</a>
-                            <!-- <a href="testimonials.html">Testimonials</a> -->
+                            <a href="testimonials.html">Testimonials</a> 
                             <a href="gallery.html">Gallery</a>
                             
                         </div>
