--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     </div>
                     <div class="carousel-item">
                         <div class="carousel-img">
-                            <img src="img/causes-3_edited.jpg" alt="Image">
+                            <img src="img/IMG15.JPG" alt="Image">
                         </div>
                         <div class="carousel-text">
                             <h1>Grade R Centre of Excellence</h1>
@@ -135,7 +135,7 @@
                     </div>
                     <div class="carousel-item">
                         <div class="carousel-img">
-                            <img src="img/carousel-4_edited.jpg" alt="Image">
+                            <img src="img/causes-3_edited.jpg" alt="Image">
                         </div>
                         <div class="carousel-text">
                             <h1>Ndumo Community Project</h1>
