--- a/gallery.html
+++ b/gallery.html
@@ -79,7 +79,7 @@
         <div class="page-header">
             <div class="container">
                 <div class="row">
-                    <div class="col-12">
+                    <div class="col-12 hi">
                         <h2>Gallery</h2>
                     </div>
                 </div>
