--- a/hackathon.html
+++ b/hackathon.html
@@ -78,7 +78,7 @@
      <div class="page-header">
         <div class="container">
             <div class="row">
-                <div class="col-12">
+                <div class="col-12 hi">
                     <h2>Intervarsity Hackathon Series </h2>
                 </div>
             </div>
