--- a/ndumo-community.html
+++ b/ndumo-community.html
@@ -77,7 +77,7 @@
      <div class="page-header">
         <div class="container">
             <div class="row">
-                <div class="col-12">
+                <div class="col-12 hi">
                     <h2>Ndumo Community Project</h2>
                 </div>
             </div>
