--- a/testimonials.html
+++ b/testimonials.html
@@ -69,7 +69,7 @@
      <div class="page-header">
         <div class="container">
             <div class="row">
-                <div class="col-12">
+                <div class="col-12 hi">
                     <h2> TESTIMONIALS </h2>
                 </div>
             </div>
