--- a/index.html
+++ b/index.html
@@ -61,15 +61,10 @@
                         <a href="#supported-projects" class="nav-item nav-link">Supported Projects</a>
                         <a href="#events" class="nav-item nav-link">Events</a>
                         <a href="#donate" class="nav-item nav-link" style="padding-right: 45px;">Contact Us</a>
-                        <!-- <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" style="padding-right: 45px;">More</a>
-                            <div class="dropdown-menu">
-                                <a href="gallery.html" class="dropdown-item">Gallery</a>
-                                <a href="#team" class="dropdown-item">Meet the team</a>
-                                <a href="#donate" class="dropdown-item">Contact Us</a>
-                            </div>
-                        </div> -->
-                        <a href="donationjourney.html" class="nav-item nav-link donate-button"><span style=" color: white;text-align: center;">DONATE</span></a>
+
+                        <a href="donationjourney.html" class="nav-item nav-link donate-button">
+                            <button class="donate-pulse-button">DONATE</button>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -506,7 +501,7 @@
                     </div>
                     <div class="causes-item">
                         <div class="causes-img">
-                            <img src="img/causes-3_edited.jpg" alt="Image"
+                            <img src="img/causes-3_edited.jpg" alt="Image">
                         </div>
                         <div class="causes-progress">
                             <div class="progress">
@@ -583,7 +578,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6" style="margin-left: 300px;">
+                    <div class="col-lg-6">
                         <div class="event-item">
                             <img src="img/tshwane fm.jpg" alt="Image">
                             <div class="event-content">
@@ -601,6 +596,7 @@
                             </div>
                         </div>
                     </div>
+                    
                 </div>
             </div>
         </div>
