--- a/ndumoVideo.html
+++ b/ndumoVideo.html
@@ -88,6 +88,10 @@
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                         <div class="navbar-nav ml-auto">
                             <a href="index.html" class="nav-item nav-link active">Home</a>
+
+                            <a href="donationjourney.html" class="nav-item nav-link donate-button">
+                                <button class="donate-pulse-button">DONATE</button>
+                            </a>
                             <!-- <a href="index.html#about" class="nav-item nav-link">About</a>
                             <a href="index.html#supported-projects" class="nav-item nav-link">Supported Projects</a>
                             <a href="index.html#events" class="nav-item nav-link">Events</a>
