--- a/grade-r-excellence.html
+++ b/grade-r-excellence.html
@@ -57,6 +57,11 @@
                         <a href="index.html#supported-projects" class="nav-item nav-link">Supported Projects</a>
                         <a href="index.html#events" class="nav-item nav-link">Events</a>
                         <a href="index.html#donate" class="nav-item nav-link" style="padding-right: 45px;">Contact Us</a>
+
+
+                        <a href="donationjourney.html" class="nav-item nav-link donate-button">
+                            <button class="donate-pulse-button">DONATE</button>
+                        </a>
                         <!-- <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">More</a>
                             <div class="dropdown-menu">
