--- a/testimonials.html
+++ b/testimonials.html
@@ -56,7 +56,14 @@
                         <a href="index.html#supported-projects" class="nav-item nav-link">Supported Projects</a>
                         <a href="index.html#events" class="nav-item nav-link">Events</a>
                         <a href="index.html#donate" class="nav-item nav-link" style="padding-right: 45px;">Contact Us</a>
-                        <a href="donationjourney.html" class="nav-item nav-link donate-button"><span style=" color: white;">DONATE</span></a>
+
+                        <a href="donationjourney.html" class="nav-item nav-link donate-button">
+                            <button class="donate-pulse-button">DONATE</button>
+                        </a>
+
+
+
+                      
                     </div>
                     </div>
                 </div>
