--- a/team.html
+++ b/team.html
@@ -164,16 +164,55 @@
         <div class="col-lg-4 col-md-6">
             <div class="team-item">
                 <div class="team-img">
-                    <img src="img/Mr Mash.jpg" alt="Team Image">
+                    <img src="img/pictures/Mash.jpg" alt="Team Image">
                 </div>
                 <div class="team-text">
                     <h2>Mashitishi Benson Phurutsi</h2>
-                    <p>Campaign Coordinator</p>
+                    <p>ICEP CEO <br>& <br>Website Project Team Advisor</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row"> <!-- Removed the commented code to ensure a clean structure -->
+        <div class="col-lg-4 col-md-6">
+            <div class="team-item">
+                <div class="team-img">
+                    <img src="img/pictures/Arnold.jpg" alt="Team Image">
+                </div>
+                <div class="team-text">
+                    <h2>Arnold Nkuna</h2>
+                    <p>Media Liaison <br>& <br> Social Media Manager</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6">
+            <div class="team-item">
+                <div class="team-img">
+                    <img src="img/pictures/Kg.jpg" alt="Team Image">
+                </div>
+                <div class="team-text">
+                    <h2>Kgaugelo Selane</h2>
+                    <p>Journalist <br>& <br> Social Media Manager</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6">
+            <div class="team-item">
+                <div class="team-img">
+                    <img src="img/pictures/Rose.jpg" alt="Team Image">
+                </div>
+                <div class="team-text">
+                    <h2>Rose Mamapolo</h2>
+                    <p>Marketing Assistant</p>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
 
 
 
@@ -342,7 +381,7 @@
                         <div class="footer-link">
                             <h2>Popular Links</h2>
                             <a href="index.html#ourtarget">Our Target</a>
-                            <a href="index.html#team">Meet The Team</a>
+                            <a href="team.html">Meet The Team</a>
                             <a href="testimonials.html">Testimonials</a> 
                             <a href="gallery.html">Gallery</a>
                             
