--- a/gallery.html
+++ b/gallery.html
@@ -226,9 +226,9 @@
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
                     <div class="position-relative rounded overflow-hidden mb-2">
-                        <img class="img-fluid w-100" src="img/IMG12.JPG" alt="">
+                        <img class="img-fluid w-100" src="img/IMG-12.JPG" alt="">
                         <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                            <a href="img/IMG12.JPG" data-lightbox="portfolio">
+                            <a href="img/IMG-12.JPG" data-lightbox="portfolio">
                                 <i class="fa fa-4x fa-plus text-primary"></i>
                             </a>
                         </div>
@@ -256,9 +256,9 @@
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
                     <div class="position-relative rounded overflow-hidden mb-2">
-                        <img class="img-fluid w-100" src="img/IMG15.JPG" alt="">
+                        <img class="img-fluid w-100" src="img/IMG-15.JPG" alt="">
                         <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                            <a href="img/IMG15.JPG" data-lightbox="portfolio">
+                            <a href="img/IMG-15.JPG" data-lightbox="portfolio">
                                 <i class="fa fa-4x fa-plus text-primary"></i>
                             </a>
                         </div>
@@ -295,7 +295,7 @@
                         </div>
                     </div>
                 </div>
-                
+                <P style="font-size: 9px; margin-top: -25px;"><i>Photographer: Nhlawulo Chauke</i></P>
             </div>
         </div>
     </div>
@@ -434,6 +434,8 @@
 </div>
 
 <!--TVH gallery ends-->
+
+  
 
 
 <div id="imageModal" class="modal">
