--- a/donationjourney.html
+++ b/donationjourney.html
@@ -211,10 +211,15 @@
     </section>
 <!-- Benefits End -->
 </div>
+
     <!--Donate Now Button Starts-->
-    <div class="button-container">
-        <a href="https://forms.office.com/r/Y3tL8uGS4J" class="nav-item nav-link donate-button"><span style=" color: white;">DONATE NOW</span></a>
+<div class="Donate now" id="navbarCollapse">
+    <div class="navbar-nav ml-auto">
+        <a href="https://forms.office.com/r/Y3tL8uGS4J" class="nav-item nav-link donate-button">
+            <button class="donate-pulse-button">DONATE</button>
+        </a>
     </div>
+</div>
         
     <!--Donate Now Button Ends-->
 
