was working on team.htmkl

--- a/testimonials.html
+++ b/testimonials.html
@@ -75,9 +75,9 @@
      <!-- Page Header Start -->
      <div class="page-header">
         <div class="container">
-            <div class="row">
-                <div class="col-12 hi">
-                    <h2> TESTIMONIALS </h2>
+            <div class="row  justify-content-center">
+                <div class="col-12 text-center">
+                    <h2>TESTIMONIALS</h2>
                 </div>
             </div>
         </div>
