--- a/donationjourney.html
+++ b/donationjourney.html
@@ -81,13 +81,14 @@
      <!-- Page Header Start -->
      <div class="page-header">
         <div class="container">
-            <div class="row">
-                <div class="col-12 hi">
-                    <h2> JOURNEY</h2>
+            <div class="row  justify-content-center">
+                <div class="col-12 text-center">
+                    <h2>JOURNEY</h2>
                 </div>
             </div>
         </div>
     </div>
+
     <!-- Page Header End -->
 
     
