--- a/gallery.html
+++ b/gallery.html
@@ -22,8 +22,7 @@
         <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
 
         <!-- Template Stylesheet -->
-        <link href="css/style.css" rel="stylesheet">
-        <link href="css/galary_style.css" rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet">   
 
         <!-- FontAwesome icons -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -82,8 +81,8 @@
 
         <div class="page-header">
             <div class="container">
-                <div class="row">
-                    <div class="col-12 hi">
+                <div class="row  justify-content-center">
+                    <div class="col-12 text-center">
                         <h2>GALLERY</h2>
                     </div>
                 </div>
