--- a/ndumo-community.html
+++ b/ndumo-community.html
@@ -102,7 +102,7 @@
         </div>
         <div class="hackathon-container" style="flex: 2; padding-left: 60px;">
             <p><i>
-                <i class="fas fa-quote-left" style="font-size: 40px; font-weight: bold; text-align: justify;"></i>
+                <i class="fas fa-quote-left" style="font-size: 40px; font-weight: bold;"></i>
                 Join us in empowering the next generation for a sustainable future.
                 The TUT Environmental Education Centre, nestled in the heart of the Ndumo Game Reserve in KZN, educates thousands of learners annually on nature conservation, water sustainability, and environmental stewardship. Beyond education, our programme addresses critical issues such as malnutrition by providing meals to learners, and it actively works to alleviate gender-based violence and poor health, which are barriers to learning.<br><br> Our centre provides hands-on learning for over 5,000 learners monthly, and our community workshops further our outreach. In the 27 years of it’s existence, this project has impacted more than 58 000 learners and the community. This centre is also used for research purposes for several critical areas within Nature Conservation and Sustainability.<br>
                 <br>
