--- a/donationjourney.html
+++ b/donationjourney.html
@@ -215,9 +215,12 @@
     <!--Donate Now Button Starts-->
 <div class="Donate now" id="navbarCollapse">
     <div class="navbar-nav ml-auto">
+        <div class="Donate Now Button" style="display: flex; justify-content: center;" >
         <a href="https://forms.office.com/r/Y3tL8uGS4J" class="nav-item nav-link donate-button">
-            <button class="donate-pulse-button">DONATE</button>
+            <button class="donate-pulse-button" onclick="donate_button()">DONATE</button>
+        
         </a>
+    </div>
     </div>
 </div>
         
@@ -291,4 +294,10 @@
         <script src="js/main.js"></script>
 
     </body>
+
+    <!-- <script> 
+         function donate_button(){
+             https://forms.office.com/r/Y3tL8uGS4J
+         }
+     </script>-->
 </html>
