--- a/gallery.html
+++ b/gallery.html
@@ -316,7 +316,7 @@
             </div>
             <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
                 <div class="position-relative rounded overflow-hidden mb-2">
-                    <img class="img-fluid w-100" src="img/IMG17.JPG" alt="">
+                    <img class="img-fluid w-100" src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG17.jpg" alt="">
                     <div class="portfolio-btn d-flex align-items-center justify-content-center">
                         <a href="img/IMG17.JPG" data-lightbox="portfolio">
                             <i class="fa fa-4x fa-plus text-primary"></i>
@@ -326,7 +326,7 @@
             </div>
             <div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
                 <div class="position-relative rounded overflow-hidden mb-2">
-                    <img class="img-fluid w-100" src="img/IMG18.JPG" alt="">
+                    <img class="img-fluid w-100" src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG18.jpg" alt="">
                     <div class="portfolio-btn d-flex align-items-center justify-content-center">
                         <a href="img/IMG18.JPG" data-lightbox="portfolio">
                             <i class="fa fa-4x fa-plus text-primary"></i>
@@ -336,7 +336,7 @@
             </div>
             <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
                 <div class="position-relative rounded overflow-hidden mb-2">
-                    <img class="img-fluid w-100" src="img/IMG19.JPG" alt="">
+                    <img class="img-fluid w-100" src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG19.jpg" alt="">
                     <div class="portfolio-btn d-flex align-items-center justify-content-center">
                         <a href="img/IMG19.JPG" data-lightbox="portfolio">
                             <i class="fa fa-4x fa-plus text-primary"></i>
