was working on team.htmkl

--- a/hackathon.html
+++ b/hackathon.html
@@ -78,17 +78,17 @@
         </div>
         <!-- Nav Bar End -->
 
-     <!-- Page Header Start -->
-     <div class="page-header">
-        <div class="container">
-            <div class="row">
-                <div class="col-12 hi">
-                    <h2>Intervarsity Hackathon Series </h2>
+             <!-- Page Header Start -->
+             <div class="page-header">
+                <div class="container">
+                    <div class="row  justify-content-center">
+                        <div class="col-12 text-center">
+                            <h2>Intervarsity Hackathon Series </h2>
+                        </div>
+                    </div>
                 </div>
-            </div>
-        </div>
-    </div>
-    <!-- Page Header End -->
+            </div>    
+        <!-- Page Header End -->
 
     <div style="display: flex; align-items: flex-start; margin-left: 150px;">
         <div style="flex: 1; text-align: center;">
