--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
                                 <div class="event-meta">
                                     <p><i class="fa fa-calendar-alt"></i>25 - 29 November 2024</p>
                                     <p><i class="far fa-clock"></i>10:00 - 13:00</p>
-                                    <p><i class="fa fa-map-marker-alt"></i>Ndumo Game Reserve, KZN</p>
+                                    <p><i class="fa fa-map-marker-alt"></i>Ndumo Game <br> Reserve,KZN</p>
                                 </div>
                                 <div class="event-text">
                                     <h3>Ndumo Community Visit</h3>
