--- a/ndumo-community.html
+++ b/ndumo-community.html
@@ -79,17 +79,17 @@
         <!-- Nav Bar End -->
 
      <!-- Page Header Start -->
-     <div class="page-header">
-        <div class="container">
-            <div class="row">
-                <div class="col-12 hi">
-                    <h2>Ndumo Community Project</h2>
+        <div class="page-header">
+            <div class="container">
+                <div class="row  justify-content-center">
+                    <div class="col-12 text-center">
+                        <h2>Ndumo Community Project</h2>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>
+        </div>    
     <!-- Page Header End -->
-    
+
 
     <div style="display: flex; align-items: flex-start; margin-left: 150px;">
         <div style="flex: 1; text-align: center;">
@@ -104,7 +104,7 @@
             <p><i>
                 <i class="fas fa-quote-left" style="font-size: 40px; font-weight: bold;"></i>
                 Join us in empowering the next generation for a sustainable future.
-                The TUT Environmental Education Centre, nestled in the heart of the Ndumo Game Reserve in KZN, educates thousands of learners annually on nature conservation, water sustainability, and environmental stewardship. Beyond education, our programme addresses critical issues such as malnutrition by providing meals to learners, and it actively works to alleviate gender-based violence and poor health, which are barriers to learning.<br><br> Our centre provides hands-on learning for over 5,000 learners monthly, and our community workshops further our outreach. In the 27 years of it’s existence, this project has impacted more than 58 000 learners and the community. This centre is also used for research purposes for several critical areas within Nature Conservation and Sustainability.<br>
+                The TUT Environmental<br> Education Centre, nestled in the heart of the Ndumo Game Reserve in KZN, educates thousands of<br> learners annually on nature conservation, water sustainability, and environmental stewardship. Beyond<br> education, our programme addresses critical issues such as malnutrition by providing meals to learners,<br> and it actively works to alleviate gender-based violence and poor health, which are barriers to learning.<br><br> Our centre provides hands-on learning for over 5,000 learners monthly, and our community workshops<br> further our outreach. In the 27 years of it’s existence, this project has impacted more than 58 000 learners and <br>the community. This centre is also used for research purposes for several critical areas within Nature<br> Conservation and Sustainability.<br>
                 <br>
                     Your support can help us continue this vital work, ensuring that every child not only learns but thrives.<br>
                     Together, we can make a difference.
